--- a/index_old.html
+++ b/index_old.html
@@ -2,7 +2,7 @@
   <head>
     <script src="https://d3js.org/d3.v4.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-    <script src="gnr_charts.js"></script>
+    <script src="gnr_charts_old.js"></script>
     <style>
       .tooltip {pointer-events: none;}
       .tooltip-bg {pointer-events: none;}
