Small style changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="gnr_charts.js"></script>
     <style>
+      .yaxis {font-size:10px; font-family: 'Averta'; font-weight: 100; stroke:#475C6D;}
       .tooltip {pointer-events: none;}
       .tooltip-bg {pointer-events: none;}
       .chart-wrapper-third {float:left; width: 33%;}
@@ -11,6 +12,7 @@
       .chart-wrapper-full {float:left; width:100%;}
       h1 {float:left; width: 100%;}
       h2 {font-size:12px;}
+      body {font-family: 'Averta';color:#475C6D;}
     </style>
   </head>
   <body>
