--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="gnr_charts.js"></script>
     <style>
-      .yaxis {font-size:10px; font-family: 'Averta'; font-weight: 100; stroke:#475C6D;}
+      @font-face {
+      font-family: Averta-Regular;
+      src: url('https://github.com/akmiller01/gnr-interactives/tree/dean/fonts/Averta-Regular.woff') format('woff');
+      }   
+      .xaxis {font-size:10px; font-weight: bolder; stroke:#475C6D; color:#475C6D; font-family: 'Averta-Regular',Averta,sans-serif; }
+      .yaxis {font-size:10px; font-weight: lighter; stroke:#475C6D; font-family: 'Averta-Regular',Averta,sans-serif; }
       .tooltip {pointer-events: none;}
       .tooltip-bg {pointer-events: none;}
       .chart-wrapper-third {float:left; width: 33%;}
       .chart-wrapper-half {float:left; width:50%;}
       .chart-wrapper-full {float:left; width:100%;}
-      h1 {float:left; width: 100%;}
-      h2 {font-size:12px;}
+      h1 {font-family: 'Averta';float:left; width: 100%;}
+      h2 {font-family: 'Averta';font-size:12px;}
       body {font-family: 'Averta';color:#475C6D;}
     </style>
   </head>
