Formatting and small tooltips change to reduce range

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <style>
       @font-face {
       font-family: Averta-Regular;
-      src: url('https://github.com/akmiller01/gnr-interactives/tree/dean/fonts/Averta-Regular.woff') format('woff');
+      src: url('fonts/ffec1ad2-fea3-4d14-bc1f-bc1b0396417b.woff') format('woff');
       }   
-      .xaxis {font-size:10px; font-weight: bolder; stroke:#475C6D; color:#475C6D; font-family: 'Averta-Regular',Averta,sans-serif; }
-      .yaxis {font-size:10px; font-weight: lighter; stroke:#475C6D; font-family: 'Averta-Regular',Averta,sans-serif; }
+      .xaxis {font-size:15px; font-weight: lighter; stroke:#475C6D; color:#475C6D; font-family: 'Averta-Regular',Averta,sans-serif; }
+      .yaxis {font-size:15px; font-weight: lighter; stroke:#475C6D; font-family: 'Averta-Regular',Averta,sans-serif; }
       .tooltip {pointer-events: none;}
       .tooltip-bg {pointer-events: none;}
       .chart-wrapper-third {float:left; width: 33%;}
       .chart-wrapper-half {float:left; width:50%;}
       .chart-wrapper-full {float:left; width:100%;}
-      h1 {font-family: 'Averta';float:left; width: 100%;}
-      h2 {font-family: 'Averta';font-size:12px;}
-      body {font-family: 'Averta';color:#475C6D;}
+      h1 {font-family: 'Averta-Regular';float:left; width: 100%;}
+      h2 {font-family: 'Averta-Regular';font-size:12px;}
+      body {font-family: 'Averta-Regular';color:#475C6D;}
     </style>
   </head>
   <body>
