Formatting fix and range reduction of tooltips finalised for line

--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
         font-weight:600;
         font-style: italic;
       }
-      .xaxis text {font-size:10px; font-weight: 600; fill:#475C6D; font-family: 'Averta',sans-serif; }
+      .xaxis text {font-size:10px; font-weight: 100; fill:#475C6D; font-family: 'Averta',sans-serif; }
       .yaxis text {font-size:10px; font-weight: 100; fill:#475C6D; font-family: 'Averta',sans-serif; }
       .tooltip {pointer-events: none;}
       .tooltip-bg {pointer-events: none;}
       .chart-wrapper-third {float:left; width: 33%;}
       .chart-wrapper-half {float:left; width:50%;}
       .chart-wrapper-full {float:left; width:100%;}
-      h1 {font-family: 'Averta-Regular';float:left; width: 100%;}
-      h2 {font-family: 'Averta-Regular';font-size:12px;}
-      body {font-family: 'Averta-Regular';color:#475C6D;}
+      h1 {font-family: 'Averta';float:left; width: 100%;color:#475C6D;}
+      h2 {font-family: 'Averta';font-size:12px;color:#475C6D;}
+      body {font-family: 'Averta';color:#475C6D;}
     </style>
   </head>
   <body>
