--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         font-style: italic;
       }
       .xaxis text {font-size:10px; font-weight: 100; fill:#475C6D; font-family: 'Averta',sans-serif; }
+      .xaxis line {stroke:#475C6D;}
+      .xaxis path {stroke:#475C6D;}
       .yaxis text {font-size:10px; font-weight: 100; fill:#475C6D; font-family: 'Averta',sans-serif; }
+      .yaxis line {stroke:#475C6D;}
+      .yaxis path {stroke:#475C6D;}
       .tooltip {pointer-events: none;}
       .tooltip-bg {pointer-events: none;}
       .chart-wrapper-third {float:left; width: 33%;}
