--- a/index.html
+++ b/index.html
@@ -40,16 +40,17 @@
       .xaxis text {font-size:10px; font-weight: 100; fill:#475C6D; font-family: 'Averta',sans-serif; }
       .xaxis line {stroke:#475C6D;}
       .xaxis path {stroke:#475C6D;}
-      .yaxis text {font-size:10px; font-weight: 100; fill:#475C6D; font-family: 'Averta',sans-serif; }
-      .yaxis line {stroke:#475C6D;}
-      .yaxis path {stroke:#475C6D;}
+      .yaxistitle {font-size:10px; font-weight: 100; fill:#CFD9E5; font-family: 'Averta',sans-serif; }
+      .yaxis text {font-size:10px; font-weight: 100; fill:#CFD9E5; font-family: 'Averta',sans-serif; }
+      .yaxis line {stroke:#CFD9E5;}
+      .yaxis path {stroke:transparent;}
       .tooltip {pointer-events: none;}
       .tooltip-bg {pointer-events: none;}
       .chart-wrapper-third {float:left; width: 33%;}
       .chart-wrapper-half {float:left; width:50%;}
       .chart-wrapper-full {float:left; width:100%;}
       h1 {font-family: 'Averta';float:left; width: 100%;color:#475C6D;}
-      h2 {font-family: 'Averta';font-size:12px;color:#475C6D;}
+      h2 {font-family: 'Averta';font-size:25px;color:#475C6D;}
       body {font-family: 'Averta';color:#475C6D;}
     </style>
   </head>
@@ -125,7 +126,7 @@
           "Non-pregnant women": pal.dark_orange
         }
       }
-      var margin2 = {top: 10, right: 300, bottom: 30, left: 30},
+      var margin2 = {top: 10, right: 300, bottom: 30, left: 45},
         width2 = 800 - margin2.left - margin2.right,
         height2 = 200 - margin2.top - margin2.bottom;
       var margin3 = {top: 10, right: 300, bottom: 30, left: 30},
