--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         font-style: italic;
       }
       .xaxis text {font-size:10px; font-weight: 100; fill:#475C6D; font-family: 'Averta',sans-serif; }
-      .xaxis line {stroke:#475C6D;}
+      .xaxis line {stroke:transparent;}
       .xaxis path {stroke:#475C6D;}
       .yaxistitle {font-size:10px; font-weight: 100; fill:#CFD9E5; font-family: 'Averta',sans-serif; }
       .yaxis text {font-size:10px; font-weight: 100; fill:#CFD9E5; font-family: 'Averta',sans-serif; }
